--- a/app/src/main/res/layout-v21/item_show_station.xml
+++ b/app/src/main/res/layout-v21/item_show_station.xml
@@ -4,11 +4,11 @@
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardCornerRadius="5dp"
-    card_view:cardElevation="5dp"
     android:layout_margin="8dp"
     card_view:cardBackgroundColor="@color/ColorWhite"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+    android:stateListAnimator="@anim/test">
 
     <LinearLayout
         android:layout_width="match_parent"
