--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,7 +53,7 @@
     </style>
     <!--每一个站点的出发结束文字风格-->
     <style name="StartEndTextStyle">
-        <item name="android:textColor">@color/ColorWhite</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">18dp</item>
         <item name="android:layout_width">match_parent</item>
@@ -61,7 +61,7 @@
     </style>
 
     <style name="ShowStartEndTextStyle">
-        <item name="android:textColor">@color/ColorWhite</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:gravity">center</item>
         <item name="android:textSize">18dp</item>
         <item name="android:layout_weight">1</item>
