--- a/app/src/main/res/layout-v21/item_clock.xml
+++ b/app/src/main/res/layout-v21/item_clock.xml
@@ -1,92 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    card_view:cardCornerRadius="5dp"
-    android:layout_margin="8dp"
-    card_view:cardBackgroundColor="@color/ColorWhite"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:stateListAnimator="@anim/test">
+    android:layout_margin="8dp"
+    android:clickable="true"
+    android:id="@id/cv_clock"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:stateListAnimator="@anim/test"
+    card_view:cardBackgroundColor="@color/ColorWhite"
+    card_view:cardCornerRadius="5dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:paddingBottom="5dp"
+            android:paddingTop="10dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="5dp"
-                android:paddingTop="10dp">
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="3"
+                android:orientation="vertical">
+
 
                 <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
                     android:layout_weight="3"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@id/tv_clock_start"
+                        style="@style/ShowStartEnd"
+                        android:text="当阳"
+                        android:textColor="@color/ColorItemClock" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="3"
-                        android:orientation="horizontal">
+                    <TextView
+                        android:id="@id/tv_clock_end"
+                        style="@style/ShowStartEnd"
+                        android:text="荆门"
+                        android:textColor="@color/ColorItemClock" />
 
-                        <TextView
-                            android:textColor="@color/ColorItemClock"
-                            android:id="@id/tv_clock_start"
-                            style="@style/ShowStartEnd"
-                            android:text="当阳" />
-
-                        <TextView
-                            android:textColor="@color/ColorItemClock"
-                            android:id="@id/tv_clock_end"
-                            style="@style/ShowStartEnd"
-                            android:text="荆门" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="2"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:textColor="@color/ColorItemClock"
-                            android:id="@id/tv_clock_start_time"
-                            style="@style/ShowStartEndTime"
-                            android:text="17:00" />
-
-                        <TextView
-                            android:textColor="@color/ColorItemClock"
-                            android:id="@id/tv_clock_end_time"
-                            style="@style/ShowStartEndTime"
-                            android:text="19:00" />
-                    </LinearLayout>
                 </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@id/tv_clock_start_time"
+                        style="@style/ShowStartEndTime"
+                        android:text="17:00"
+                        android:textColor="@color/ColorItemClock" />
+
+                    <TextView
+                        android:id="@id/tv_clock_end_time"
+                        style="@style/ShowStartEndTime"
+                        android:text="19:00"
+                        android:textColor="@color/ColorItemClock" />
+                </LinearLayout>
             </LinearLayout>
 
-            <TextView
-                android:textColor="@color/ColorItemClock"
-                android:id="@id/tv_clock_train_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="G11"
-                android:textSize="15dp" />
-
-            <TextView
-                android:textColor="@color/ColorItemClock"
-                android:id="@id/tv_clock_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="提醒时间"
-                android:textSize="15dp" />
         </LinearLayout>
+
+        <TextView
+            android:id="@id/tv_clock_train_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="G11"
+            android:textColor="@color/ColorItemClock"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@id/tv_clock_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="提醒时间"
+            android:textColor="@color/ColorItemClock"
+            android:textSize="15dp" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
