--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -41,5 +41,6 @@
     <item name="tv_clock_time" type="id">tv_clock_time</item>
     <item name="cv_item_statin" type="id">cv_item_statin</item>
     <item name="cv_clock" type="id">cv_clock</item>
+    <item name="tv_clock_tip" type="id">tv_clock_tip</item>
 
 </resources>
