设置页面新增了一个 可以切换状态 的设置选项 勾选时候勾选时候立刻打开服务监听 并默认打开 解除勾选时候就stop服务 并默认关闭 更换了app图标以及notification的显示图标

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -42,5 +42,6 @@
     <item name="cv_item_statin" type="id">cv_item_statin</item>
     <item name="cv_clock" type="id">cv_clock</item>
     <item name="tv_clock_tip" type="id">tv_clock_tip</item>
+    <item name="msiv_setting_clock" type="id">msiv_setting_clock</item>
 
 </resources>
