--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -14,7 +14,9 @@
         <FrameLayout
             android:id="@id/home_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"></FrameLayout>
+            android:layout_height="match_parent">
+
+        </FrameLayout>
 
 
 </android.support.design.widget.CoordinatorLayout>
